Prevent vertical scrolling in the footer on mobile devices

--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@ footer p {
         height: 240px;
         width: auto;
         row-gap: 10px;
+        overflow-y: hidden;
     }
     footer p {
         margin-top: 30px;
